# upsailai-demo

./: Diagramme sans nom.drawio  README.md  README_old.md
discord/: README.md  backoffice_dashboard.py  pyproject.toml  requirements.txt  streamlit_backoffice_dashboard.py
discord/app/: main.py  routes.py
discord/app/chat/: chain.py  routes.py
discord/app/core/: config.py
discord/app/utils/: logging.py
discord/chains/: chain_manager.py  init_localfilestore.py  retriever.py
discord/chains/modules/: embeddings.py  vectorstore.py
