[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = "RAG_endpoint"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
click = "^8.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
